--- a/samples/java/JavaSDKDoc/SConscript
+++ b/samples/java/JavaSDKDoc/SConscript
@@ -16,18 +16,18 @@
 Import('env')
 
 # The return value is the collection of files installed in the build destination.
-returnValue = env.SConscript('JavaSDKDocMethodsClient/SConscript')
-returnValue += env.SConscript('JavaSDKDocMethodsService/SConscript')
-returnValue += env.SConscript('JavaSDKDocPropertiesClient/SConscript')
-returnValue += env.SConscript('JavaSDKDocPropertiesService/SConscript')
-returnValue += env.SConscript('JavaSDKDocSecurityLogonClient/SConscript')
-returnValue += env.SConscript('JavaSDKDocSecurityLogonService/SConscript')
-returnValue += env.SConscript('JavaSDKDocSecurityRsaClient/SConscript')
-returnValue += env.SConscript('JavaSDKDocSecurityRsaClient2/SConscript')
-returnValue += env.SConscript('JavaSDKDocSecurityRsaService/SConscript')
-returnValue += env.SConscript('JavaSDKDocSecuritySRPClient/SConscript')
-returnValue += env.SConscript('JavaSDKDocSecuritySRPService/SConscript')
-returnValue += env.SConscript('JavaSDKDocSignalClient/SConscript')
-returnValue += env.SConscript('JavaSDKDocSignalService/SConscript')
+returnValue = env.SConscript('JavaSDKDocMethodsClient/SConscript', exports = ['env'])
+returnValue += env.SConscript('JavaSDKDocMethodsService/SConscript', exports = ['env'])
+returnValue += env.SConscript('JavaSDKDocPropertiesClient/SConscript', exports = ['env'])
+returnValue += env.SConscript('JavaSDKDocPropertiesService/SConscript', exports = ['env'])
+returnValue += env.SConscript('JavaSDKDocSecurityLogonClient/SConscript', exports = ['env'])
+returnValue += env.SConscript('JavaSDKDocSecurityLogonService/SConscript', exports = ['env'])
+returnValue += env.SConscript('JavaSDKDocSecurityRsaClient/SConscript', exports = ['env'])
+returnValue += env.SConscript('JavaSDKDocSecurityRsaClient2/SConscript', exports = ['env'])
+returnValue += env.SConscript('JavaSDKDocSecurityRsaService/SConscript', exports = ['env'])
+returnValue += env.SConscript('JavaSDKDocSecuritySRPClient/SConscript', exports = ['env'])
+returnValue += env.SConscript('JavaSDKDocSecuritySRPService/SConscript', exports = ['env'])
+returnValue += env.SConscript('JavaSDKDocSignalClient/SConscript', exports = ['env'])
+returnValue += env.SConscript('JavaSDKDocSignalService/SConscript', exports = ['env'])
 
 Return('returnValue')
