--- a/samples/SConscript
+++ b/samples/SConscript
@@ -19,8 +19,8 @@ Import('env')
 returnValue = []
 
 if env['OS'] == 'android':
-    returnValue += env.SConscript('android/SConscript')
+    returnValue += env.SConscript('android/SConscript', exports = ['env'])
 elif env['OS'] == 'linux' or env['OS_GROUP'] == 'windows':
-    returnValue += env.SConscript('java/SConscript')
+    returnValue += env.SConscript('java/SConscript', exports = ['env'])
 
 Return('returnValue')
