ALLJOYN-2096 Update SConscript to copy connectionless chat java sample to the build directory.
Change-Id: Ia137d57d6ef0cdeae0a6312cad5a28780909c6ac

--- a/samples/android/SConscript
+++ b/samples/android/SConscript
@@ -39,6 +39,7 @@ for sample in ['simple/client',
                'properties/PropertiesService',
                'contacts/ContactsClient',
                'contacts/ContactsService',
+               'sessionless/chat',
                'sessionless/client',
                'sessionless/service']:
     returnValue += env.Install('$JAVA_DISTDIR/samples/%s' % sample, 
