ALLJOYN-1973: Tweak setting environment logic when ANDROID_PROXIMITY=on.
This is fallout from changes to build_core for this ticket.

Change-Id: If53929083341298e8859afbc59a61d3187f32ce8

--- a/src/SConscript
+++ b/src/SConscript
@@ -26,15 +26,21 @@ JavaStatus('org/alljoyn/bus/Status')
 # AllJoyn Java binding
 if env['OS'] == 'android':
     # Get P2P java files from core
-    main_classes = env.Java('$CLASSDIR', source = ['.'], JAVACLASSPATH=env.subst('$JAVACLASSPATH'))
+    main_classes = env.Java('$CLASSDIR', source = ['.'], JAVACLASSPATH = env.subst('$JAVACLASSPATH'))
 
     if env['OS'] == 'android' and env['ANDROID_PROXIMITY'] == 'on':
-        main_classes += env.Java('$CLASSDIR', source = ['../helper'], JAVACLASSPATH=env.subst('$JAVACLASSPATH'))
+        if env.get('ANDROID_SDK', '') == '':
+            print 'ANDROID_SDK must be set when building ICE=on.'
+            if not GetOption('help'):
+                Exit()
+
+        env.AppendENVPath("JAVACLASSPATH", env.subst('$ANDROID_SDK/platforms/android-$ANDROID_API_LEVEL/android.jar'))
+        main_classes += env.Java('$CLASSDIR', source = ['../helper'], JAVACLASSPATH = env.subst('$JAVACLASSPATH'))
 
     alljoyn_jar = env.Jar('$JARDIR/alljoyn.jar', source = [main_classes])
 
 elif (env['OS'] == 'linux' or env['OS_GROUP'] == 'windows'):
-    main_classes = env.Java('$CLASSDIR', source = ['.'], JAVACLASSPATH=env.subst('$JAVACLASSPATH'))
+    main_classes = env.Java('$CLASSDIR', source = ['.'], JAVACLASSPATH = env.subst('$JAVACLASSPATH'))
     alljoyn_jar = env.Jar('$JARDIR/alljoyn.jar', source = [main_classes])
 
 if env['VARIANT'] == 'debug' :
