--- a/src/SConscript
+++ b/src/SConscript
@@ -34,7 +34,7 @@ if env['OS'] == 'android':
             if not GetOption('help'):
                 Exit(1)
 
-        env.AppendENVPath("JAVACLASSPATH", env.subst('$ANDROID_SDK/platforms/android-$ANDROID_API_LEVEL/android.jar'))
+        env.Append(JAVACLASSPATH = os.pathsep + env.subst('$ANDROID_SDK/platforms/android-$ANDROID_API_LEVEL/android.jar'))
         main_classes += env.Java('$CLASSDIR', source = ['../helper'], JAVACLASSPATH = env.subst('$JAVACLASSPATH'))
 
     alljoyn_jar = env.Jar('$JARDIR/alljoyn.jar', source = [main_classes])
